eerste aanpassingen - test

--- a/opdracht-2/flexbox.css
+++ b/opdracht-2/flexbox.css
@@ -1,3 +1,10 @@
 /* ======================================================
    OEFENEN MET FLEXBOX
 ========================================================= */
+
+.one{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
