--- a/opdracht-2/flexbox.css
+++ b/opdracht-2/flexbox.css
@@ -6,5 +6,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    }
 
+.two{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
