--- a/opdracht-2/flexbox.css
+++ b/opdracht-2/flexbox.css
@@ -49,8 +49,18 @@ form{
     flex-wrap: wrap;
 }
 
-.item{
+.item1{
+    flex-basis: 400px;
+    flex-grow: 1 ;
+}
+
+.item2{
     flex-basis: 300px;
     flex-grow: 1 ;
+}
+
+.item3{
+    flex-basis: 300px;
+    flex-grow: 2 ;
 }
 
